--- a/notabook/index.html
+++ b/notabook/index.html
@@ -50,13 +50,6 @@
       <br>
       The water is locked up in a mineral called ringwoodite about 660km (400 miles) beneath the crust of the Earth, researchers say. Geophysicist Steve Jacobsen from Northwestern University in the US co-authored the study published in the journal Science and said the discovery suggested Earth’s water may have come from within, driven to the surface by geological activity, rather than being deposited by icy comets hitting the forming planet as held by the prevailing theories.
       <br>
-
-      “Geological processes on the Earth’s surface, such as earthquakes or erupting volcanoes, are an expression of what is going on inside the Earth, out of our sight,” Jacobsen said.
-      <br>
-
-      “I think we are finally seeing evidence for a whole-Earth water cycle, which may help explain the vast amount of liquid water on the surface of our habitable planet. Scientists have been looking for this missing deep water for decades.”
-      <br>
-
     </p>
   </div>
 
@@ -64,6 +57,15 @@
   <div class="pic1">
     <img src="assets/images/1.svg">
   </div>
+
+<div class="quote">
+      “Geological processes on the Earth’s surface, such as earthquakes or erupting volcanoes, are an expression of what is going on inside the Earth, out of our sight,”
+      <br>
+      <br>
+      “I think we are finally seeing evidence for a whole-Earth water cycle, which may help explain the vast amount of liquid water on the surface of our habitable planet. Scientists have been looking for this missing deep water for decades.”
+      <br>
+
+</div>
 
     <p>
 
