--- a/notabook/article2.html
+++ b/notabook/article2.html
@@ -135,7 +135,7 @@
   <br>
   Article and images sourced from https://www.popsci.com/humans-survive-underground/
   <br>
-  Video sourced from 
+  Video sourced from https://www.youtube.com/watch?v=kypk9na_wbM
 </div>
 
 
