--- a/notabook/article1.html
+++ b/notabook/article1.html
@@ -18,10 +18,10 @@
 
 <div class="menu">
 
-  <div class="but logo"><a href="index">UNDER</a></div>
-  <div class="but"><a href="article1">Article 1</a></div>
-  <div class="but"><a href="article2">Article 2</a></div>
-  <div class="but"><a href="article3">Article 3</a></div>
+  <div class="but logo"><a href="https://amygao8.github.io/notabook/index.html">UNDER</a></div>
+  <div class="but"><a href="https://amygao8.github.io/notabook/article1.html">Article 1</a></div>
+  <div class="but"><a href="https://amygao8.github.io/notabook/article2.html">Article 2</a></div>
+  <div class="but"><a href="https://amygao8.github.io/notabook/article3.html">Article 3</a></div>
 </div>
 
   <div class="page">
