--- a/notabook/index.html
+++ b/notabook/index.html
@@ -13,9 +13,35 @@
     <!-- DO NOT REMOVE ABOVE -->
     <!-- start here -->
 
-   <video src="https://d2r55xnwy6nx47.cloudfront.net/uploads/2020/01/MantleBlobs_2880x1800_Lede.mp4" autoplay="autoplay" muted="true" loop="true" playsinline="true" width="100%"></video>
+<div class="cont">
 
-  <div class="line"></div>
+<div class="art">
+    <a href="https://amygao8.github.io/notabook/article1.html">LAND
+      <div class="one">
+        
+      </div></a>
+</div>
+
+<div class="art">
+  <a href="https://amygao8.github.io/notabook/article2.html">HUMAN
+ <div class="two">
+
+ </div>
+</a>
+</div>
+
+<div class="art">
+  <a href="https://amygao8.github.io/notabook/article3.html">OCEAN
+    <div class="three">
+      
+    </div>
+  </a>
+</div>
+</div>
+
+  <div class="line">
+    UNDER
+  </div>
 
  <div class="tittle">
    UNDER
@@ -28,6 +54,7 @@
   <div class="tittle b">
   GROUND
  </div>
+
 
 
 
