--- a/index.html
+++ b/index.html
@@ -15,108 +15,55 @@
 
 
   <div class="tittle">
-    Amy's Home Page
+    Amy Gao
   </div>
 
-  <br>
-  <br>
-  <br>
-  <br>
-
- 
+<div class="cont left">
   <img src="assets/images/heart.jpg">
-
-<br>
-<br>
-
-  <div class="info">
-
-  <div class="col">
-  <a href="amygao8.github.io/xyz-1/P1.html">
-    Set 1:Poster 1
-  </a>
- </div>  
-
-  <div class="col">
-  <a href="amygao8.github.io/xyz-1/P2.html">
-    Set 1:Poster 2
-  </a>
- </div> 
-
-  <div class="col">
-  <a href="amygao8.github.io/xyz-1/P3.html">
-    Set 1:Poster 3
-  </a>
-  </div> 
-
-   <div class="col">
-  <a href="amygao8.github.io/xyz-1/P4.html">
-    Set 1:Poster 4
-  </a>
-  </div>  
-
-   <div class="col">
-  <a href="amygao8.github.io/xyz-1/P5.html">
-    Set 1:Poster 4
-  </a>
-  </div>  
-
-   <div class="col">
-  <a href="amygao8.github.io/xyz-2/P1.html">
-    Set 2:Poster 1
-  </a>
-  </div> 
-
-  <div class="col">
-  <a href="amygao8.github.io/xyz-2/P2.html">
-    Set 2:Poster 2
-  </a>
-  </div> 
-
-  <div class="col">
-  <a href="amygao8.github.io/xyz-2/P3.html">
-    Set 2:Poster 3
-  </a>
-  </div> 
-
-   <div class="col">
-  <a href="amygao8.github.io/xyz-2/P4.html">
-    Set 2:Poster 4
-  </a>
-  </div>
-
-   <div class="col">
-  <a href="amygao8.github.io/xyz-2/P5.html">
-    Set 2:Poster 5
-  </a>
-  </div> 
-
-  </div>
- <!-- info 1 ends -->
-
- <br>
- 
-<div class ="info">
-  <div class="col">
-<a href="amygao8.github.io/Moon/index.html">
-  Image Net
-</a>
-  </div>
 </div>
 
+<div class="cont right">
+  <div class="poster">
 
-  <div class="name">
-    CDS3002 Digital Publishing
-  </div>  
+    <div class="p1">
+      XYZ One <br>
+      <a href="https://amygao8.github.io/xyz-1/P1.html">Poster One</a>
+       <a href="https://amygao8.github.io/xyz-1/P2.html">Poster Two</a>
+       <a href="https://amygao8.github.io/xyz-1/P3.html">Poster Three</a>
+      <a href="https://amygao8.github.io/xyz-1/P4.html">
+      Poster Four</a>
+       <a href="https://amygao8.github.io/xyz-1/P5.html">Poster Five</a>
+    </div>
+  
+   <br>
+  <br>
 
-  <div class="mada">
-    MADA
-  </div>                     
+    <div class="p2">
+      XYZ Two <br>
+      <a href="https://amygao8.github.io/xyz-2/P1.html">Poster One</a>
+       <a href="https://amygao8.github.io/xyz-2/P2.html">Poster Two</a>
+       <a href="https://amygao8.github.io/xyz-2/P3.html">Poster Three</a>
+      <a href="https://amygao8.github.io/xyz-2/P4.html">
+      Poster Four</a>
+       <a href="https://amygao8.github.io/xyz-2/P5.html">Poster Five</a>
+    </div>
+<br>
+<br>
 
+    <div class="im">
+    Image Net <br>
+      <a href="https://amygao8.github.io/Moon/index.html">Moon</a>
+    </div>
 
-  <div class="rectangle"></div>
+<br>
+<br>
 
-  <div class="rect"></div>
+    <div class="not">
+    Not A Book <br>
+      <a href="https://amygao8.github.io/notabook/index.html">Under</a>
+    </div>
+  </div>
+</div>
     <!-- DO NOT REMOVE BELOW -->
     <!-- end here -->
   </body>
