--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div class="im">
     Image Net <br>
-      <a href="https://amygao8.github.io/Moon/index.html">Moon</a>
+      <a href="amygao8.github.io/imagenet/index.html">Moon</a>
     </div>
 
 <br>
@@ -63,6 +63,10 @@
       <a href="https://amygao8.github.io/notabook/index.html">Under</a>
     </div>
   </div>
+</div>
+
+<div class="footer">
+CC BY-NC-SA 4.0 Amy Gao
 </div>
     <!-- DO NOT REMOVE BELOW -->
     <!-- end here -->
