--- a/misinformation/brex.html
+++ b/misinformation/brex.html
@@ -21,20 +21,27 @@
 <br>
 
     <div class="info">
-Bre-X Minerals Ltd. was a Canadian gold exploration company that perpetrated one of the biggest mining scams and frauds in Canadian history. Bre-X Minerals was formed by former stockbroker David Walsh in 1988. In 1993, at the behest of Walsh's partner, geologist John Felderhof, the company commenced gold exploration near the Busang river in Indonesia, with geologist Michael de Guzman hired as the exploration manager. By 1996, Bre-X was estimating that the Busang property contained 47 million ounces of gold and the company's market capitalization had exceeded C$6 billion.
-<br>
-<br>
-
-The scam unraveled rapidly in March 1997, after de Guzman reportedly fell to his death from a helicopter over the Indonesian jungle, shortly after potential Busang project partner, Freeport-McMoran, said that its due diligence had revealed only insignificant amounts of gold at the property. Bre-X plunged on the news and was delisted in May 1997, and in the process wiped out billions of dollars for its hapless investors, including major Canadian pension plans.
-
-<br>
+<div class="ofw">
+<p>Bre-X Minerals Ltd. was a Canadian gold exploration company that perpetrated one of the biggest mining scams and frauds in Canadian history. Bre-X Minerals was formed by former stockbroker David Walsh in 1988. In 1993, at the behest of Walsh's partner, geologist John Felderhof, the company commenced gold exploration near the Busang river in Indonesia, with geologist Michael de Guzman hired as the exploration manager. By 1996, Bre-X was estimating that the Busang property contained 47 million ounces of gold and the company's market capitalization had exceeded C$6 billion.
+</p>
 <br>
 
-The Bre-X fraud was perpetrated by the simple act of salting core samples with gold. With the deaths of Michael de Guzman in 1997 (under suspicious circumstances) and David Walsh, who died of a brain aneurysm in 1998, John Felderhof was the only remaining principal character in this debacle. While charges of illegal insider trading were brought against Felderhof in 1999, he was acquitted of these charges in 2007.
-<br>
+<p>The scam unraveled rapidly in March 1997, after de Guzman reportedly fell to his death from a helicopter over the Indonesian jungle, shortly after potential Busang project partner, Freeport-McMoran, said that its due diligence had revealed only insignificant amounts of gold at the property. Bre-X plunged on the news and was delisted in May 1997, and in the process wiped out billions of dollars for its hapless investors, including major Canadian pension plans.
+</p>
+</div>
+
+<div class="ofw au">AU</div>
+<div class="tfw"> <img src="assets/images/b.jpg"></div>
+
+<div class="tfw">
+<p>The Bre-X fraud was perpetrated by the simple act of salting core samples with gold. With the deaths of Michael de Guzman in 1997 (under suspicious circumstances) and David Walsh, who died of a brain aneurysm in 1998, John Felderhof was the only remaining principal character in this debacle. While charges of illegal insider trading were brought against Felderhof in 1999, he was acquitted of these charges in 2007.
+</p>
 <br>
 
-One effect of the Bre-X scandal was to strengthen securities regulation in Canada. National Instrument (NI) 43-101 implemented Standards for Disclosure for Mineral Projects after Bre-X imploded in order to improve the transparency of mining projects. Since many companies in Canada are engaged in mining operations, it was considered imperative to establish a regulatory authority over geological practices.
+<p>One effect of the Bre-X scandal was to strengthen securities regulation in Canada. National Instrument (NI) 43-101 implemented Standards for Disclosure for Mineral Projects after Bre-X imploded in order to improve the transparency of mining projects. Since many companies in Canada are engaged in mining operations, it was considered imperative to establish a regulatory authority over geological practices.
+  </p>
+  </div>
+
     </div>
 
     <br>
@@ -45,6 +52,8 @@ One effect of the Bre-X scandal was to strengthen securities regulation in Canad
 
 <div class="start">
   The Scandal starts:
+  <br>
+  <br>1989
 </div>
 
 
@@ -155,6 +164,9 @@ One effect of the Bre-X scandal was to strengthen securities regulation in Canad
 
 </div>
 
+<div class="next"> <a href="">NEXT</a></div>
+
+<div class="footer">CC BY-NC-SA 4.0 Amy Gao</div>
     <!-- DO NOT REMOVE BELOW -->
     <!-- end here -->
   </body>
