--- a/misinformation/enron.html
+++ b/misinformation/enron.html
@@ -21,18 +21,32 @@
 <br>
 
     <div class="info">
+
+      <div class="ofw">
+<p>
 Enron was an American energy company that was looking to change the face of energy management in the United States, creating markets around the sale of electricity and natural gas. As a market leader, the company’s stock price shot through the roof.
 But some of the numbers supporting those prices were cooked—Chairman Ken Lay and CEO Jeff Skilling shuffled financing structures and debt around to artificially inflate the company’s revenues.
-<br>
+</p>
 <br>
 
+<p>
 Analysts grew suspicious and the executives became defensive. Skilling sold off $33 million in shares and then resigned as the stock price faltered under continuing examination. By the end of 2001, the company was bankrupt, and those executives and others were on trial. Twenty-one people were found guilty and sentenced for the coverup.
+</p>
+</div>
+
+<div class="ofw au">CH4</div>
+<div class="tfw"> <img src="assets/images/e.jpg"></div>
+
+<div class="tfw">
+<p>
 The scandal also resulted in a major sub-scandal, when respected accounting consultancy Arthur Andersen was convicted of shredding evidence for their client during the course of the investigation. Although the conviction was reversed on appeal, the company’s position as an unbiased auditor was so called into question that it surrendered its accounting licenses and effectively ceased independent operation.
-
+</p>
 <br>
-<br>
 
+<p>
 The Enron scandal reshaped the corporate accounting environment in the United States by leading to the Sarbanes-Oxley Act of 2002. Much more stringent requirements for reporting and responsibility of public companies and accounting firms, including criminal penalties for boards of directors, have substantially altered the business landscape.
+</p>
+</div>
     </div>
 
     <br>
@@ -43,6 +57,8 @@ The Enron scandal reshaped the corporate accounting environment in the United St
 
 <div class="start">
   The Scandal starts:
+  <br>
+  <br> 1985
 </div>
 
 
@@ -147,8 +163,11 @@ The Enron scandal reshaped the corporate accounting environment in the United St
 </div>
 
 
+<div class="next"> <a href="">NEXT</a></div>
 
 
+
+<div class="footer">CC BY-NC-SA 4.0 Amy Gao</div>
 
 
 
