--- a/misinformation/index.html
+++ b/misinformation/index.html
@@ -15,65 +15,43 @@
 
 <!-- Please typing your favorite word!-->
 
+<div class="layout">
+
 <div class="top">
-<div id="ui">
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-  <div class="text">LET GO OF THE PAST BUT KEEP THE LESSONS IT TAUGHT YOU</div>
-</div>
-</div>
-
-<div class="container">
-  <div class="link">
-    <img src="assets/images/brex.png">
-  </div>
-  <div class="link">
-    <img src="assets/images/enron.png">
-  </div>
-  <div class="link">
-    <img src="assets/images/theranos.png">
-  </div>
+<img src="assets/images/main.png">
 </div>
 
 
+<div class="right">
 
+<div class="bar">
+  
+  <div class="cont one">
+    <a href="#brexintro">
+      <h1>BRE-X</h1>
+      <img src="assets/images/3.jpg">
+    </a>
+  </div>
+
+  <div class="cont two">
+    <a href="#theranosintro">
+      <h1>THERANOS</h1>
+      <img src="assets/images/1.jpg">
+    </a>
+  </div>
+
+  <div class="cont three">
+    <a href="#enronintro">
+      <h1>ENRON</h1>
+      <img src="assets/images/2.jpg">
+    </a>
+  </div>
+
+</div>
+
+</div> 
+
+</div>
 
 
     <!-- DO NOT REMOVE BELOW -->
