--- a/misinformation/theranos.html
+++ b/misinformation/theranos.html
@@ -22,22 +22,29 @@
 <br>
 
     <div class="info">
-Theranos' star was shining bright going into 2015.
+    <div class="ofw">
+<p>Theranos' star was shining bright going into 2015.
+</p>
 <br>
+<p>The blood-testing startup had racked up a $9 billion valuation with its big vision to test for a number of conditions using a small sample of blood, and its CEO Elizabeth Holmes was featured on the covers of business magazines and lists of top executives. But then questions started being raised about how the company's technology worked. 
+</p>
 <br>
 
-The blood-testing startup had racked up a $9 billion valuation with its big vision to test for a number of conditions using a small sample of blood, and its CEO Elizabeth Holmes was featured on the covers of business magazines and lists of top executives. But then questions started being raised about how the company's technology worked. 
+<p>As Wall Street Journal reporter John Carreyrou details in his book, "Bad Blood: Secrets and Lies in a Silicon Valley Startup," the events leading up to the downfall of the company started unfolding years earlier. The book gives a behind the scenes look into the events that propelled Theranos into chaos.
+</p>
+</div>
 
-<br>
-<br>
-
-As Wall Street Journal reporter John Carreyrou details in his book, "Bad Blood: Secrets and Lies in a Silicon Valley Startup," the events leading up to the downfall of the company started unfolding years earlier. The book gives a behind the scenes look into the events that propelled Theranos into chaos.
+<div class="tfw au">BLOOD</div>
     </div>
 
-    <br>
+<div class="graph">
+  <img src="assets/images/graph2.png">
+</div>
 
 <div class="start">
   The Scandal starts:
+  <br>
+  <br>2003
 </div>
 
 
@@ -179,10 +186,8 @@ As Wall Street Journal reporter John Carreyrou details in his book, "Bad Blood: 
 
 </div>
 
-<div class="graph">
-  <img src="assets/images/graph2.png">
-</div>
-
+<div class="next"> <a href="">NEXT</a></div>
+<div class="footer">CC BY-NC-SA 4.0 Amy Gao</div>
 
     <!-- DO NOT REMOVE BELOW -->
     <!-- end here -->
