--- a/3ore/brexintro.html
+++ b/3ore/brexintro.html
@@ -59,7 +59,7 @@
 </div>
 
 <div class="line">
-  <a href="https://amygao8.github.io/misinformation/brex">Next</a>
+  <a href="https://amygao8.github.io/3ore/brex.html">Next</a>
 </div>
 
 
