--- a/3ore/enron.html
+++ b/3ore/enron.html
@@ -163,7 +163,7 @@ The Enron scandal reshaped the corporate accounting environment in the United St
 </div>
 
 
-<div class="next"> <a href="https://amygao8.github.io/3ore.github.io/brexintro.html">NEXT</a></div>
+<div class="next"> <a href="https://amygao8.github.io/3ore/brexintro.html">NEXT</a></div>
 
 
 
