--- a/3ore/index.html
+++ b/3ore/index.html
@@ -27,21 +27,21 @@
 <div class="bar">
   
   <div class="cont one">
-    <a href="https://amygao8.github.io/3ore.github.io/brexintro.html">
+    <a href="https://amygao8.github.io/3ore/brexintro.html">
       <h1>BRE-X</h1>
       <img src="assets/images/3.jpg">
     </a>
   </div>
 
   <div class="cont two">
-    <a href="#https://amygao8.github.io/3ore.github.io/theranosintro.html">
+    <a href="#https://amygao8.github.io/3ore/theranosintro.html">
       <h1>THERANOS</h1>
       <img src="assets/images/1.jpg">
     </a>
   </div>
 
   <div class="cont three">
-    <a href="https://amygao8.github.io/3ore.github.io/enronintro.html">
+    <a href="https://amygao8.github.io/3ore/enronintro.html">
       <h1>ENRON</h1>
       <img src="assets/images/2.jpg">
     </a>
