--- a/3ore/brex.html
+++ b/3ore/brex.html
@@ -164,7 +164,7 @@
 
 </div>
 
-<div class="next"> <a href="https://amygao8.github.io/3ore.github.io/theranosintro.html">NEXT</a></div>
+<div class="next"> <a href="https://amygao8.github.io/3ore/theranosintro.html">NEXT</a></div>
 
 <div class="footer">CC BY-NC-SA 4.0 Amy Gao</div>
     <!-- DO NOT REMOVE BELOW -->
