--- a/3ore/theranos.html
+++ b/3ore/theranos.html
@@ -186,7 +186,7 @@
 
 </div>
 
-<div class="next"> <a href="https://amygao8.github.io/3ore.github.io/enronintro.html">NEXT</a></div>
+<div class="next"> <a href="https://amygao8.github.io/3ore/enronintro.html">NEXT</a></div>
 <div class="footer">CC BY-NC-SA 4.0 Amy Gao</div>
 
     <!-- DO NOT REMOVE BELOW -->
