--- a/3ore/index.html
+++ b/3ore/index.html
@@ -34,7 +34,7 @@
   </div>
 
   <div class="cont two">
-    <a href="#https://amygao8.github.io/3ore/theranosintro.html">
+    <a href="https://amygao8.github.io/3ore/theranosintro.html">
       <h1>THERANOS</h1>
       <img src="assets/images/1.jpg">
     </a>
