--- a/3ore/theranosintro.html
+++ b/3ore/theranosintro.html
@@ -59,7 +59,7 @@
 </div>
 
 <div class="line">
-  <a href="amygao8.github.io/3ore//theranos.html">Next</a>
+  <a href="https://amygao8.github.io/3ore/theranos.html">Next</a>
 </div>
 
 
