--- a/3ore/theranos.html
+++ b/3ore/theranos.html
@@ -15,7 +15,7 @@
 
 
 <div class="tittle">
-  <img src="assets/images/theranos.png">
+  <a href="https://amygao8.github.io/3ore/"><img src="assets/images/theranos.png"></a>
 </div>
 
 <br>
