--- a/3ore/enron.html
+++ b/3ore/enron.html
@@ -14,7 +14,7 @@
     <!-- start here -->
 
 <div class="tittle">
-  <img src="assets/images/enron.png">
+  <a href="https://amygao8.github.io/3ore/"><img src="assets/images/enron.png"></a>
 </div>
 
 <br>
